# olimptraining

./: CMakeLists.txt  README.md  badisgood.cpp  check.cpp  cleaner.cpp  count.cpp  fib.cpp  grades.cpp  info.cpp  longest.cpp  merge.cpp  numerator.cpp  oddsoneout.cpp  reverse.cpp  sum.cpp
badisgood-files/: bad.txt
cleaner-file/: input.txt
count-files/: text.txt
files/: list.txt  output.txt
grades-files/: register.txt
info-files/: input.txt
longest-files/: words-of-wisdom.txt
mun-ex/: cadoul.cpp  circuite.cpp  energie.cpp  expresii.cpp  luni.cpp  muntele.cpp  roman.cpp
mun-ex/cadoul-files/: cadoul.out
mun-ex/circuite-files/: circuite.in
mun-ex/energie-files/: energie.in  energie.out
mun-ex/expresii-files/: expresii.in  expresii.out
mun-ex/luni-files/: luni.in  luni.out
numerator-files/: input.txt
offex/: catalogul.cpp  cuvinte.cpp  piese.cpp  tintas.cpp
offex/catalogul-files/: catalogul.in  catalogul.out
offex/cuvintele-files/: cuvinte.in  cuvinte.out
reverse-files/: words.txt
sum-files/: numbers.txt
